Minor fix to alignment of Zendesk logo for phones

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -128,7 +128,7 @@
         svg {
             position: absolute;
             top: 4%;
-            z-index: 1;
+            z-index: 9999;
             stroke: url(#gradient);
 
             .top {
